<resources>
    <string name="app_name">TriaCulturaDroid</string>
    <string name="title_activity_login_tria_cultura">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tabbets">TabbetsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dni">dni</string>
    <string name="entrar">entrar</string>
    <string name="literal_profile_picture">Profile Picture</string>
    <string name="literal_dni">Dni:</string>
    <string name="literal_nom">Nom:</string>
    <string name="literal_correu_electr_nic">Correu Electrònic:</string>
    <string name="btn_canvia_password">Canvia Password</string>
    <string name="btn_canvia_correu">Canvia Correu</string>
    <string name="btn_historial_de_vots">Historial de vots</string>
    <string name="btn_valoracions">Valoracions</string>
    <string name="userField">El camp Usuari està buit</string>
    <string name="fieldPass">No hi ha cap password introduit</string>
    <string name="errorPassOrUsrInvalid">Usuari o paraula de pas incorrecte.</string>
    <string name="insert_old_password">Insert old Password</string>
    <string name="insert_a_new_password">Insert a new Password</string>
    <string name="insert_the_new_password_again">Insert the new Password again</string>
    <string name="imatge_del_projecte">Imatge del projecte</string>
    <string name="confirmar_nou_email">Confirmar nou email</string>
    <string name="insertar_nou_email">Insertar nou email</string>
    <string name="confirma_paraula_de_pas">Confirma paraula de pas</string>
    <string name="nova_paraula_de_pas">Nova paraula de pas</string>
    <string name="paraula_de_pas_actual">Paraula de pas actual</string>
    <string name="recorda_m">Recorda\'m</string>
    <string name="title">TITLE</string>
    <string name="date">DATE</string>
    <string name="author_name">AUTHOR NAME</string>
    <string name="this_the_description_projectthis_the_description_projectthis_the_description_projectthis_the_description_projectthis_the_description_projectthis_the_description_projectthis_the_description_projectthis_the_description_projectthis_the_description_project">THIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECTTHIS THE DESCRIPTION PROJECT</string>
    <string name="pasCanviat">Paraula de pas canviada!</string>
    <string name="pasNocoin">La paraula de pas no coincideix.</string>
    <string name="mailChange">Email canviat!</string>
    <string name="mailNotChange">Els emails no coincideixen.</string>
    <string name="NotChangePas">Els camps no coincideixen.</string>
    <string name="ElProjectNoTrob">El projecte no s\'ha trobat.</string>
    <string name="Historial">Historial</string>
    <string name="enConcurs">En concurs</string>
    <string name="perfil">Perfil</string>
</resources>
