<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    tools:context="com.example.xavi.triaculturadroid.FragmentProfile"
    android:baselineAligned="false">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tv_label_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/literal_dni"/>
        <TextView
            android:id="@+id/tv_user_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tv_label_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/literal_nom"/>
        <TextView
            android:id="@+id/tv_user_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tv_label_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/literal_correu_electr_nic"/>
        <TextView
            android:id="@+id/tv_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:id="@+id/btn_see_votes"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_historial_de_vots"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_change_pass"
                android:layout_width="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/star"/>
            <ImageButton
                android:id="@+id/btn_change_mail"
                android:layout_width="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/star"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pasword_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <EditText
            android:id="@+id/oldpass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/insert_old_password"
            android:background="@drawable/edittextstyle"/>
        <EditText
            android:id="@+id/newpass1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif"
            android:hint="@string/insert_a_new_password"
            android:background="@drawable/edittextstyle"/>
        <EditText
            android:id="@+id/newpass2"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/insert_the_new_password_again"
            android:background="@drawable/edittextstyle"/>


            <Button
                android:id="@+id/DS_btn_aceptar_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mail_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/newMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/insert_old_password"
                android:background="@drawable/edittextstyle"/>
            <EditText
                android:id="@+id/newMail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/insert_the_new_password_again"
                android:background="@drawable/edittextstyle"/>


            <Button
                android:id="@+id/DS_btn_aceptar_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>
